postgres-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: postgres
  name: postgres
  namespace: burp
spec:
  containers:
  - image: postgres:15.2
    name: postgres
    ports:
    - containerPort: 5432
    resources: {}
    volumeMounts:
    - name: postgres-vol
      mountPath: /var/lib/postgresql/data
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
    - name: postgres-vol
      persistentVolumeClaim:
        claimName: postgres-pvc
status: {}
