postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: postgres
  name: postgres
  namespace: burp
spec:
  ports:
  - name: 5432-5432
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    run: postgres
  type: ClusterIP
status:
  loadBalancer: {}
