traefik-dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard-service
  namespace: traefik
spec:
  type: LoadBalancer
  ports:
    - port: 9000
      targetPort: traefik
  selector:
    app.kubernetes.io/name: traefik
