burp-ingress-cert-manager.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    cert-manager.io/issuer: issuer
  name: bsee-web-server
  namespace: burp
spec:
  ingressClassName: public
  tls:
  - hosts:
    - bsee-web-server.test
    secretName: bsee-web-certificate-ingress
  rules:
  - host: bsee-web-server.test
    http:
      paths:
      - backend:
          service:
            name: bsee-web-server
            port:
              number: 8443
        path: /
        pathType: Prefix
